@@ -2,52 +2,18 @@
 package common.network;
 
 
-import http.ContentTypeMap;
-
-
+import java.io.BufferedReader;
+import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.io.OutputStream;
-import java.nio.CharBuffer;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.nio.charset.Charset;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
-
-
-import javax.net.ssl.HostnameVerifier;
-import javax.net.ssl.SSLSession;
-
-
-import org.apache.http.ConnectionReuseStrategy;
-import org.apache.http.Header;
-import org.apache.http.HttpException;
-import org.apache.http.HttpHost;
-import org.apache.http.HttpRequest;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.concurrent.FutureCallback;
-import org.apache.http.conn.ConnectionKeepAliveStrategy;
-import org.apache.http.conn.routing.HttpRoute;
-import org.apache.http.entity.FileEntity;
-import org.apache.http.impl.nio.client.CloseableHttpAsyncClient;
-import org.apache.http.impl.nio.client.HttpAsyncClientBuilder;
-import org.apache.http.impl.nio.client.HttpAsyncClients;
-import org.apache.http.message.BasicHeader;
-import org.apache.http.nio.IOControl;
-import org.apache.http.nio.NHttpClientConnection;
-import org.apache.http.nio.client.methods.AsyncCharConsumer;
-import org.apache.http.nio.client.methods.HttpAsyncMethods;
-import org.apache.http.nio.conn.NHttpClientConnectionManager;
-import org.apache.http.nio.conn.SchemeIOSessionStrategy;
-import org.apache.http.nio.protocol.HttpAsyncRequestProducer;
-import org.apache.http.nio.reactor.IOEventDispatch;
-import org.apache.http.nio.reactor.IOSession;
-import org.apache.http.protocol.HttpContext;
-import org.apache.http.protocol.HttpProcessor;
 
 
 import posix.generic.errno.errno;
@@ -58,109 +24,49 @@ import common.utils.MyResult;
 
 
 public class HttpUpload {
+	public interface HttpUploadListener {
+		public void onFinished (MyResult <Long> retval);
+	}
+
+
+	public void setKEY_UPLOAD (String KEY_UPLOAD) {
+		this.KEY_UPLOAD = KEY_UPLOAD;
+	}
+
+
+	public String getKEY_UPLOAD () {
+		return this.KEY_UPLOAD;
+	}
+
 
 	/*
-	 * Post file to postUrl
+	 * start to upload file to uploadUrl
 	 */
-	public MyResult <String> asyncUpload (String filePath, String uploadUrl,
-		ContentTypeMap.ContentTypeValue contentType, Charset charset,
-		Header headers[]) {
+	public MyResult <String> startUploadFile (String filePath,
+		String uploadUrl, org.apache.http.entity.ContentType contentType,
+		Charset charset) {
 		try {
-			Log.v(TAG, "asyncUpload");
+			Log.v(TAG, "startUploadFile");
+
+			/* FIXME: check all arguments first */
 
 			this.file = new File(filePath);
-
-			try {
-				this.instream = new FileInputStream(HttpUpload.this.file);
-			} catch (FileNotFoundException e) {
+			if (!file.exists()) {
 				return new MyResult <String>(errno.ENOENT * -1,
-					e.getMessage(), null);
+					"No such file or directory", null);
 			}
 
-			this.contentType = contentType;
-			this.charset = charset;
-			this.headers = headers;
 			this.uploadUrl = uploadUrl;
 
-			new FileEntity(this.file,
-				ContentTypeMap.value2string(this.contentType) + ";charset="
-					+ this.charset.toString()) {
-				// this.uploadFile = new FileEntity(this.file,
-				// ContentTypeMap.value2string(this.contentType)) {
-				@Override
-				public void consumeContent () throws IOException {
-					// TODO Auto-generated method stub
-				}
-
-
-				@Override
-				public InputStream getContent () throws IOException,
-					IllegalStateException {
-					return HttpUpload.this.instream;
-				}
-
-
-				@Override
-				public Header getContentEncoding () {
-					return new BasicHeader("charset", "utf-8");
-				}
-
-
-				@Override
-				public long getContentLength () {
-					try {
-						return HttpUpload.this.instream.available();
-					} catch (IOException e) {
-						Log.e(TAG + "", "E: " + e.getMessage());
-
-						return 0;
-					}
-				}
-
-
-				@Override
-				public Header getContentType () {
-					return new BasicHeader("content-type",
-						ContentTypeMap
-							.value2string(HttpUpload.this.contentType));
-				}
-
-
-				@Override
-				public boolean isChunked () {
-					return false;
-				}
-
-
-				@Override
-				public boolean isRepeatable () {
-					return false;
-				}
-
-
-				@Override
-				public boolean isStreaming () {
-					return true;
-				}
-
-
-				@Override
-				public void writeTo (OutputStream os) throws IOException {
-					Log.v(TAG, "writeTo");
-					// TODO Auto-generated method stub
-				}
-
-			};
-
 			try {
-				new UploadThread().start();
+				new UploadThread(contentType, charset).start();
 			} catch (Exception e) {
 				;
 			}
 
 			return new MyResult <String>(0, null, filePath);
 		} catch (Exception e) {
-			Log.e(TAG + ":asycPost", "E: " + e.getMessage());
+			Log.e(TAG + ":startUploadFile", "E: " + e.getMessage());
 
 			return new MyResult <String>(errno.EXTRA_EEUNRESOLVED * -1,
 				e.getMessage(), null);
@@ -168,290 +74,215 @@ public class HttpUpload {
 	}
 
 
+	public void setHttpUploadListener (HttpUploadListener httpUploadListener) {
+		this.httpUploadListener = httpUploadListener;
+	}
+
+
+	public HttpUploadListener getHttpUploadListener () {
+		return this.httpUploadListener;
+	}
+
+
 	private class UploadThread extends Thread {
+		public UploadThread (org.apache.http.entity.ContentType contentType,
+			Charset charset) {
+			this.contentType = contentType;
+			this.charset = charset;
+		}
+
+
 		@Override
 		public void run () {
 			try {
-				/* builder to create HTTP client */
+				Log.v(TAG, "run");
 
-				HttpAsyncClientBuilder builder = HttpAsyncClients.custom();
-
-				/* verify for host name */
-				/* System.setProperty("http.keepAlive", "false"); */
-				final HostnameVerifier hostnameVerifier = new HostnameVerifier() {
-
-					@Override
-					public boolean verify (String hn, SSLSession ssl) {
-						return true;
-					}
-
-				};
-
-				builder.setSSLHostnameVerifier(hostnameVerifier);
-
-				/* IO session */
-				SchemeIOSessionStrategy strategy = new SchemeIOSessionStrategy() {
-
-					@Override
-					public boolean isLayeringRequired () {
-						// TODO Auto-generated method stub
-						return false;
-					}
-
-
-					@Override
-					public IOSession upgrade (HttpHost arg0, IOSession arg1)
-						throws IOException {
-						// TODO Auto-generated method stub
-						return null;
-					}
-				};
-				builder.setSSLStrategy(strategy);
-
-				/* connection reuse */
-				ConnectionReuseStrategy reuseStrategy = new ConnectionReuseStrategy() {
-
-					@Override
-					public boolean keepAlive (HttpResponse hr, HttpContext hc) {
-						return false;
-					}
-
-				};
-				builder.setConnectionReuseStrategy(reuseStrategy);
-
-				/* connection manager */
-				NHttpClientConnectionManager connManager = new NHttpClientConnectionManager() {
-
-					@Override
-					public void closeExpiredConnections () {
-						// TODO Auto-generated method stub
-
-					}
-
-
-					@Override
-					public void closeIdleConnections (long arg0, TimeUnit arg1) {
-						// TODO Auto-generated method stub
-
-					}
-
-
-					@Override
-					public void execute (IOEventDispatch arg0)
-						throws IOException {
-					}
-
-
-					@Override
-					public boolean isRouteComplete (NHttpClientConnection arg0) {
-						// TODO Auto-generated method stub
-						return false;
-					}
-
-
-					@Override
-					public void releaseConnection (
-						NHttpClientConnection arg0, Object arg1, long arg2,
-						TimeUnit arg3) {
-						// TODO Auto-generated method stub
-
-					}
-
-
-					@Override
-					public Future <NHttpClientConnection> requestConnection (
-						HttpRoute arg0, Object arg1, long arg2, long arg3,
-						TimeUnit arg4,
-						FutureCallback <NHttpClientConnection> arg5) {
-						// TODO Auto-generated method stub
-						return null;
-					}
-
-
-					@Override
-					public void routeComplete (NHttpClientConnection arg0,
-						HttpRoute arg1, HttpContext arg2) {
-						// TODO Auto-generated method stub
-
-					}
-
-
-					@Override
-					public void shutdown () throws IOException {
-						// TODO Auto-generated method stub
-
-					}
-
-
-					@Override
-					public void startRoute (NHttpClientConnection arg0,
-						HttpRoute arg1, HttpContext arg2) throws IOException {
-						// TODO Auto-generated method stub
-
-					}
-
-
-					@Override
-					public void upgrade (NHttpClientConnection arg0,
-						HttpRoute arg1, HttpContext arg2) throws IOException {
-						// TODO Auto-generated method stub
-
-					}
-
-				};
-				builder.setConnectionManager(connManager);
-
-				/* connection keep alive */
-				ConnectionKeepAliveStrategy keepAliveStrategy = new ConnectionKeepAliveStrategy() {
-
-					@Override
-					public long getKeepAliveDuration (HttpResponse arg0,
-						HttpContext arg1) {
-						return 60 * 1000;
-					}
-
-				};
-				builder.setKeepAliveStrategy(keepAliveStrategy);
-
-				builder.setHttpProcessor(HttpUpload.this.httpprocessor);
-
-				/* create HTTP client */
-				CloseableHttpAsyncClient httpclient = builder.build();
-
-				/* Start the client */
-				httpclient.start();
+				final String BOUNDARY = "******";
+				final String HYPHENS = "--";
+				final String LINEEND = "\n";
 
 				try {
+					MyResult <Long> retval = new MyResult <Long>(0, null, 0L);
 
-					final HttpHost target = new HttpHost("183.237.232.202",
-						80);
-					final HttpPost request = new HttpPost();
-					request.setHeaders(headers);
-					request.setEntity(uploadFile);
-					// request.setURI(new URI(uploadUrl));
+					URL url = new URL(HttpUpload.this.uploadUrl);
+					HttpURLConnection httpURLConnection = null;
+					try {
+						httpURLConnection = (HttpURLConnection) url
+							.openConnection();
+					} catch (IOException e) {
+						retval.code = errno.EIO * -1;
+						retval.msg = e.getMessage();
+						Log.e(TAG, "E: openConnection: " + e.getMessage());
+					}
 
-					HttpAsyncRequestProducer producer = HttpAsyncMethods
-						.create(target, request);
+					OutputStream os = null;
+					if (0 == retval.code) {
+						/*
+						* 设置每次传输的流大小，可以有效防止手机因为内存不足崩溃
+						* 此方法用于在预先不知道内容长度时启用没有进行内部缓冲的 HTTP请求正文的流
+						*/
+						httpURLConnection.setChunkedStreamingMode(128 * 1024);/* 128K */
+						/* 允许输入输出流 */
+						httpURLConnection.setDoInput(true);
+						httpURLConnection.setDoOutput(true);
+						httpURLConnection.setUseCaches(false);
 
-					AsyncCharConsumer <HttpResponse> consumer = new AsyncCharConsumer <HttpResponse>() {
+						/* 使用POST方法 */
+						httpURLConnection.setRequestMethod("POST");
+						httpURLConnection.setRequestProperty("Connection",
+							"Keep-Alive");
+						/* "UTF-8" */
+						httpURLConnection.setRequestProperty("Charset",
+							this.charset.name());
+						/* multipart/form-data */
+						httpURLConnection.setRequestProperty("Content-Type",
+							this.contentType.getMimeType() + ";boundary="
+								+ BOUNDARY);
 
-						HttpResponse response;
+						try {
+							os = httpURLConnection.getOutputStream();
+						} catch (IOException e) {
+							retval.code = errno.EIO * -1;
+							retval.msg = e.getMessage();
+							Log.e(TAG,
+								"E: getOutputStream: " + e.getMessage());
+						}
+					}
 
+					DataOutputStream no = null;
+					if (0 == retval.code) {
+						no = new DataOutputStream(os);
+					}
 
-						@Override
-						protected void onResponseReceived (
-							final HttpResponse response) {
-							this.response = response;
+					if (0 == retval.code) {
+						String path = HttpUpload.this.file.getAbsolutePath();
+						String filename = path.substring(path
+							.lastIndexOf("/") + 1);
+
+						try {
+							no.writeBytes(HYPHENS + BOUNDARY + LINEEND);
+
+							no.writeBytes("Content-Disposition: form-data; name=\""
+								+ KEY_UPLOAD
+								+ "\"; filename=\""
+								+ filename
+								+ "\"" + LINEEND);
+							no.writeBytes(LINEEND);
+						} catch (IOException e) {
+							retval.code = errno.EIO * -1;
+							retval.msg = e.getMessage();
+							Log.e(TAG, "E: writeBytes: " + e.getMessage());
+						}
+					}
+
+					FileInputStream fi = null;
+					if (0 == retval.code) {
+						try {
+							fi = new FileInputStream(
+								HttpUpload.this.file.getAbsolutePath());
+						} catch (FileNotFoundException e) {
+							retval.code = errno.ENOENT * -1;
+							retval.msg = e.getMessage();
+							fi = null;
+							Log.e(TAG,
+								"E: FileInputStream: " + e.getMessage());
+						}
+					}
+
+					long total = 0;
+					if (0 == retval.code) {
+						byte[] buffer = new byte[8192];/* 8 KB */
+						/* 读取文件 */
+						int count = 0;
+
+						try {
+							while ((count = fi.read(buffer, 0, 8192)) != -1) {
+								no.write(buffer, 0, count);
+								total += count;
+							}
+						} catch (Exception e) {
+							retval.code = errno.EIO * -1;
+							retval.msg = e.getMessage();
+							Log.e(TAG, "E: read and write: " + e.getMessage());
 						}
 
-
-						@Override
-						protected void onCharReceived (final CharBuffer buf,
-							final IOControl ioctrl) throws IOException {
-							// Do something useful
-							// ioctrl.requestOutput();
+						try {
+							fi.close();
+						} catch (Exception e) {
+							Log.e(TAG, "E: close: ignore: " + e.getMessage());
 						}
 
+					}
 
-						@Override
-						protected void releaseResources () {
+					Log.i(TAG, "transfer content bytes: " + total);
+					retval.cc = total;
+
+					if (0 == retval.code) {
+						try {
+							no.writeBytes(LINEEND);
+							no.writeBytes(HYPHENS + BOUNDARY + HYPHENS
+								+ LINEEND);
+							no.flush();
+						} catch (Exception e) {
+							Log.e(
+								TAG,
+								"E: read and write: ignore: "
+									+ e.getMessage());
 						}
 
+						/* get reply */
+						InputStream ni = httpURLConnection.getInputStream();
 
-						@Override
-						protected HttpResponse buildResult (
-							final HttpContext context) {
-							return this.response;
-						}
+						InputStreamReader isr = new InputStreamReader(ni,
+							"utf-8");
 
-					};
+						BufferedReader br = new BufferedReader(isr);
+						do {
+							String result;
+							try {
+								result = br.readLine();
+								if (null == result || result.length() <= 0) {
+									break;
+								}
+							} catch (Exception e) {
+								break;
+							}
 
-					/*
-					 * Execute request
-					 * and wait until response is received
-					 */
+							Log.i(TAG, "response: " + result);
+						} while (true);
 
-					Future <HttpResponse> future = httpclient.execute(
-						producer, consumer, uploadCallback);
+						ni.close();
+					}
 
-					HttpResponse response = future.get();
+					httpURLConnection.disconnect();
+					no.close();
+					os.close();
 
-					latch.await();
-
-					Log.v(
-						TAG,
-						request.getRequestLine() + " -> "
-							+ response.getStatusLine());
-
+					super.run();
 				} catch (Exception e) {
 					;
 				} finally {
-					if (null != httpclient) {
-						httpclient.close();
-					}
 					super.run();
 				}
 			} catch (Exception e) {
 				;
 			}
 		}
+
+
+		private org.apache.http.entity.ContentType contentType;
+
+		private Charset charset;
 	}
 
 
-	private FutureCallback <HttpResponse> uploadCallback = new FutureCallback <HttpResponse>() {
-
-		@Override
-		public void cancelled () {
-			latch.countDown();
-		}
-
-
-		@Override
-		public void completed (HttpResponse arg0) {
-			latch.countDown();
-		}
-
-
-		@Override
-		public void failed (Exception arg0) {
-			latch.countDown();
-		}
-
-	};
-
-	private HttpProcessor httpprocessor = new HttpProcessor() {
-
-		@Override
-		public void process (HttpRequest hr, HttpContext arg1)
-			throws HttpException, IOException {
-			Log.v(TAG + ":httpprocessor", "process");
-		}
-
-
-		@Override
-		public void process (HttpResponse arg0, HttpContext arg1)
-			throws HttpException, IOException {
-			// TODO Auto-generated method stub
-		}
-
-	};
-
 	private static final String TAG = HttpUpload.class.getSimpleName();
 
-	private final CountDownLatch latch = new CountDownLatch(1);
-
-	private FileEntity uploadFile;
-
-	private Header headers[];
+	private String KEY_UPLOAD = "upload";
 
 	private String uploadUrl;
 
-	private ContentTypeMap.ContentTypeValue contentType;
-
-	private Charset charset;
+	private HttpUploadListener httpUploadListener;
 
 	private File file;
-
-	private FileInputStream instream;
-
 }
